--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,55 @@ bin-release/
 # Project files, i.e. `.project`, `.actionScriptProperties` and `.flexProperties`
 # should NOT be excluded as they contain compiler settings and other important
 # information for Eclipse / Flash Builder.
+
+### Common Build Deploy ###
+**/manifest-generated.yml
+
+### Build Output Directories (Combined) ###
+build/
+bin/
+classes/
+out/
+target/
+log/
+
+### Gradle ###
+.gradle/
+
+### Maven ###
+.mvn/
+
+### IntelliJ IDEA ###
+.idea/
+*.iws
+*.iml
+*.ipr
+
+### Eclipse ###
+.settings/
+.classpath
+.project
+.metadata
+.springBeans
+
+### Node/NPM ###
+node_modules/
+dist/
+typings/
+coverage/
+jspm_packages/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.env
+
+### OS Specific ###
+.DS_Store
+Thumbs.db
+[Dd]esktop.ini
+$RECYCLE.BIN/
+
+### Other ###
+*.swp
+vars.local.yml
+*.tsv
